# mean_filter

./: CMakeLists.txt  README.md
src/: main.cpp
